# walkie-talkie

./: CMakeLists.txt  server.py
main/: CMakeLists.txt  Kconfig.projbuild  audio.c  audio.h  config.c  config.h  espnow_mic.c  espnow_mic.h  espnow_recv.c  main.c  simple_transport.c  simple_transport.h  udp_client.c  udp_client.h  udp_server.c  udp_server.h
